--- a/Pages/disaster/profile/entrylog/CheckIn.cshtml
+++ b/Pages/disaster/profile/entrylog/CheckIn.cshtml
@@ -39,9 +39,13 @@
             <h1 class="display-5 fw-bold text-center">Check-in Evacuee</h1>
 
             <div class="col-auto d-flex justify-content-between align-items-center" style="gap: 5px">
-                 <a class="btn btn-primary mb-2 d-none d-sm-inline" href="/disaster/profile/entrylog/addfamily/index">
-                     <i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Family
+                <a class="btn btn-primary mb-2 d-none d-sm-inline" href="/disaster/profile/entrylog/addfamily/index?centerLogID=@Model.logInfo.centerLogID">
+                     <i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Family not found? Add Family
                  </a>
+
+                <a class="btn btn-primary mb-2 d-sm-none" href="/disaster/profile/entrylog/addfamily/index?centerLogID=@Model.logInfo.centerLogID">
+                    <i class="bi bi-plus-circle pt" style="padding: 5px;"></i>
+                </a>
             </div>
         </div>
 
@@ -257,7 +261,7 @@
     $(document).ready(function () {
         var table = $('#entrylog-table').DataTable({
             responsive: false,
-            pageLength: 25;
+            pageLength: 25,
             columnDefs: [
                 { "orderable": true, "targets": [1] }, // Sortable columns
                 { "orderable": false, "targets": [0, 2, 3, 4, 5] } // Non-sortable columns
