--- a/Pages/Disaster/Add.cshtml
+++ b/Pages/Disaster/Add.cshtml
@@ -57,9 +57,17 @@
 
 			<!-- Date Occurred -->
 			<div class="row mb-1">
-				<label class="col-sm-4 col-form-label text-start" for="dateOccured">Date Occured:<span class="text-danger" style="padding:5px">*</span></label>
+				<label class="col-sm-4 col-form-label text-start" for="dateOccured">
+					Date Occured:
+					<span class="text-danger" style="padding:5px">*</span>
+				</label>
 				<div class="col-sm-8">
-					<input type="date" class="form-control" name="dateOccured" value="@Model.disasterInfo.dateOccured" required onkeydown="return false" max="@DateTime.Now.ToString("yyyy-MM-dd")" />
+					@{
+						DateTime minDate = DateTime.Now.AddYears(-100);
+						string minDateString = minDate.ToString("yyyy-MM-dd");
+					}
+					<input type="date" class="form-control" name="dateOccured" value="@Model.disasterInfo.dateOccured"
+						   min="@minDateString" max="@DateTime.Now.ToString("yyyy-MM-dd")" required>
 				</div>
 			</div>
 
