--- a/Pages/UserManagement/LGUStaff/Edit.cshtml
+++ b/Pages/UserManagement/LGUStaff/Edit.cshtml
@@ -79,7 +79,12 @@
             <div class="row mb-1">
                 <label class="col-sm-4 col-form-label text-start" for="birthdate">Birthdate:<span class="text-danger" style="padding:5px">*</span></label>
                 <div class="col-sm-8">
-                    <input type="date" id="birthdate" name="birthdate" class="form-control" value="@Model.birthdate" required pattern="\d{4}-\d{2}-\d{2}" />
+                    @{
+                        DateTime minDate = DateTime.Now.AddYears(-100);
+                        string minDateString = minDate.ToString("yyyy-MM-dd");
+                    }
+                    <input type="date" class="form-control" name="birthdate" id="birthdate" value="@Model.birthdate"
+                           min="@minDateString" max="@DateTime.Now.ToString("yyyy-MM-dd")" required>
                 </div>
             </div>
 
