--- a/Pages/disaster/profile/Edit.cshtml
+++ b/Pages/disaster/profile/Edit.cshtml
@@ -63,9 +63,17 @@
 
 			<!-- Date Occurred -->
 			<div class="row mb-1">
-				<label class="col-sm-4 col-form-label text-start" for="disasterName">Date Occured:<span class="text-danger" style="padding:5px">*</span></label>
+				<label class="col-sm-4 col-form-label text-start" for="disasterName">
+					Date Occured:
+					<span class="text-danger" style="padding:5px">*</span>
+				</label>
 				<div class="col-sm-8">
-					<input type="date" class="form-control" name="dateOccured" value="@Model.disasterInfo.dateOccured" required pattern="\d{4}-\d{2}-\d{2}">
+					@{
+						DateTime minDate = DateTime.Now.AddYears(-100);
+						string minDateString = minDate.ToString("yyyy-MM-dd");
+					}
+					<input type="date" class="form-control" name="dateOccured" value="@Model.disasterInfo.dateOccured"
+						   min="@minDateString" max="@DateTime.Now.ToString("yyyy-MM-dd")" required>
 				</div>
 			</div>
 
