--- a/Pages/family/add/Index.cshtml
+++ b/Pages/family/add/Index.cshtml
@@ -154,8 +154,12 @@
 						Birthdate:
 						<span class="text-danger" style="padding: 5px">*</span>
 					</label>
-					<input type="date" class="form-control text-muted" name="birthdate"
-						   value="@Model.memberInfo.birthdate" required onkeydown="return false" max="@DateTime.Now.ToString("yyyy-MM-dd")">
+					@{
+						DateTime minDate = DateTime.Now.AddYears(-100);
+						string minDateString = minDate.ToString("yyyy-MM-dd");
+					}
+					<input type="date" class="form-control" name="birthdate" value="@Model.memberInfo.birthdate"
+						   min="@minDateString" max="@DateTime.Now.ToString("yyyy-MM-dd")" required>
 				</div>
 			</div>
 
