--- a/Pages/disaster/profile/entrylog/CheckIn.cshtml
+++ b/Pages/disaster/profile/entrylog/CheckIn.cshtml
@@ -171,7 +171,7 @@
                 <!-- Cancel and Save Button -->
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                     <a href="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID" type="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
-                    <button type="button" class="btn btn-primary" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal">Save</button>
+                    <button type="button" class="btn btn-primary" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>Save</button>
                 </div>
             </div>
         </div>
