--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,99 +5,83 @@
 }
 
 <style>
-    .slider::-webkit-scrollbar {
-        display: none;
-    }
-    
-    .container-slide {
-        padding: 1rem;
-    }
-
-    .slider-wrapper {
-        position: relative;
-        max-width: 100rem;
-        margin: 0 auto;
-    }
-
-    .slider {
-        display: flex;
-        aspect-ratio: 21.00/ 9;
-        overflow-x: auto;
-        scroll-snap-type: x mandatory;
-        scroll-behavior: smooth;
-        /*box-shadow: 0 2.9rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);*/
-        border-radius: 0.5rem;
-    }
-
-    .slider img {
-        flex: 1 0 100%;
-        scroll-snap-align: start;
-        object-fit: cover;
-    }
-
-    .slider img:nth-child(3) {
-    object-position: top;
-    }
-
-    .slider-nav {
-        display: flex;
-        column-gap: 1rem;
-        position: absolute;
-        bottom: 1.25rem;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 1;
-    }
-
-    .slider-nav a {
-        width: 0.75rem;
-        height: 0.75rem;
-        border-radius: 50%;
-        background-color: #fff;
-        opacity: 0.75;
-        transition: opacity ease 250ms;
-    }
-
-    .slider-nav a:hover {
-        opacity: 1;
-        background-color: #6db5b1;
-    }
-
-    body {
-        /*background-image: url('./images/bgimg.jpg');*/
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-attachment: fixed; /* This ensures the background image stays fixed when scrolling */
-    }
-
     /* Adjust the size of the DataTable search input */
     div.dataTables_wrapper div.dataTables_filter input {
         width: 150px;
         margin-right: 10px;
     }
-</style>
 
-
-
-<!--LINKS-->
-<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    .carousel-caption{
+        top: 50%;
+        transform: translateY(-50%);
+        bottom: initial;
+    }
+ </style>
 
 <!--MAIN-->
 @section Dashboard {
-    <section class="container-slide pt-5">
-        <div class="slider-wrapper">
-            <div class="slider" id="imageSlider">
-                <img id="slide-1" src="/images/ec1img.jpg" alt="EC 1 Image">
-                <img id="slide-2" src="/images/ec2img.jpg" alt="EC 2 Image">
-                <img id="slide-3" src="/images/ec3img.jpg" alt="EC 3 Image">
+    <div id="myCarousel" class="carousel slide text-white" data-bs-ride="carousel" data-bs-touch="false" data-bs-interval="2000">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class="active" aria-current="true"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item">
+                <img src="/images/ec1img.png" class="d-block w-100" alt="EC1 Image">
+                <div class="carousel-caption text-start d-none d-md-block">
+                    <div class="col-md-6 p-lg-5 mx-auto my-5">
+                        <h1 class="text-white">“Together, we stand stronger in the face of adversity.”</h1>
+                        <br />
+                        <p>
+                            Agapay Aid is a web-based application dedicated to aiding the disaster relief efforts in the Philippines.
+                            Our application streamlines the management of evacuation centers, ensuring efficient resource allocation, equitable relief goods distribution, staff coordination, and seamless registration of evacuees.
+                        </p>
+                        <br />
+                        <p><a class="btn btn-primary" href="/about">Learn more about <b>Agapay</b>Aid</a></p>
+                    </div>
+                </div>
             </div>
-            <div class="slider-nav">
-                <a href="#slide-1"></a>
-                <a href="#slide-2"></a>
-                <a href="#slide-3"></a>
+            <div class="carousel-item active">
+                <img src="/images/ec2img.png" class="d-block w-100" alt="EC2 Image">
+                <div class="carousel-caption text-start d-none d-md-block">
+                    <div class="col-md-6 p-lg-5 mx-auto my-5">
+                        <h1 class="text-white">“Together, we stand stronger in the face of adversity.”</h1>
+                        <br />
+                        <p>
+                            Agapay Aid is a web-based application dedicated to aiding the disaster relief efforts in the Philippines.
+                            Our application streamlines the management of evacuation centers, ensuring efficient resource allocation, equitable relief goods distribution, staff coordination, and seamless registration of evacuees.
+                        </p>
+                        <br />
+                        <p><a class="btn btn-primary" href="/about">Learn more about <b>Agapay</b>Aid</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="/images/ec3img.png" class="d-block w-100" alt="EC3 Image">
+                <div class="carousel-caption text-start d-none d-md-block">
+                    <div class="col-md-6 p-lg-5 mx-auto my-5">
+                        <h1 class="text-white">“Together, we stand stronger in the face of adversity.”</h1>
+                        <br />
+                        <p>
+                            Agapay Aid is a web-based application dedicated to aiding the disaster relief efforts in the Philippines.
+                            Our application streamlines the management of evacuation centers, ensuring efficient resource allocation, equitable relief goods distribution, staff coordination, and seamless registration of evacuees.
+                        </p>
+                        <br />
+                        <p><a class="btn btn-primary" href="/about">Learn more about <b>Agapay</b>Aid</a></p>
+                    </div>
+                </div>
             </div>
         </div>
-    </section>
+        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 }
 
 <div class="container form-container1">
@@ -236,12 +220,14 @@
         </div>
     </div>
 </div>
+
 <div class="container">
-    <div class="p-4 p-md-5 mb-4 text-white rounded bg-primary text-center">
+    <div class="p-4 p-md-5 mb-4 text-white rounded bg-primary text-center d-md-none">
+        <!-- This content will be hidden on medium and larger screens -->
         <div class="col-md-6 mx-auto">
             <h1><img src="/white-logo-horizontal.png" alt="" id="logo"></h1>
             <p class="lead my-3">Together, we stand stronger in the face of adversity.</p>
-            <a class="btn btn-outline-secondary text-white" href="/about">Learn More</a>
+            <a class="btn btn-outline-secondary text-white" href="/about">Learn More about <b>Agapay</b>Aid</a>
         </div>
     </div>
 </div>
