Added a group by family button.

--- a/Pages/Disaster/Profile/Report.cshtml
+++ b/Pages/Disaster/Profile/Report.cshtml
@@ -102,9 +102,9 @@
     <!--DISASTER INFORMATION-->
     <div>
         <h4 class="pb-2"><strong>DISASTER INFORMATION:</strong></h4>
-        <table class="table display compact order-column table-hover" cellspacing="0" width="100%">
+        <table class="display compact order-column table-hover" cellspacing="0" width="30%">
             <tr>
-                <th class="text-start pe-4">ID</th>
+                <th class="text-start">ID</th>
                 <td class="text-start">@Model.disasterInfo.disasterID</td>
             </tr>
             <tr>
@@ -112,15 +112,15 @@
                 <td class="text-start">@Model.disasterInfo.disasterName</td>
             </tr>
             <tr>
-                <th class="text-start pe-4">TYPE</th>
+                <th class="text-start">TYPE</th>
                 <td class="text-start">@Model.disasterInfo.disasterType</td>
             </tr>
             <tr>
-                <th class="text-start pe-4">DESCRIPTION</th>
+                <th class="text-start">DESCRIPTION</th>
                 <td class="text-start"> @Model.disasterInfo.description</td>
             </tr>
             <tr>
-                <th class="text-start pe-4">DATE OCCURRED</th>
+                <th class="text-start">DATE OCCURRED</th>
                 <td class="text-start"> @Model.disasterInfo.dateOccured</td>
             </tr>
         </table>
