--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -53,22 +53,22 @@
                     <li><a href="/usermanagement/index" class="nav-link px-3 text-white">Users</a></li>
                     @*<li><a href="/settings/index" class="nav-link px-3 text-white">Settings</a></li>*@
                 </ul>
-                @* <div class="flex-shrink-0 dropdown">
-                    <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="~/sample-pic.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
+                <div class="flex-shrink-0 dropdown">
+                    <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle text-white" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi bi-person-circle text-white"></i>
                     </a>
                     <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-                        <li><a class="dropdown-item" href="#">Notification.</a></li>
-                        <li><a class="dropdown-item" href="#">Settings</a></li>
+                        <li><a class="dropdown-item" href="">Notification.</a></li>
+                        <li><a class="dropdown-item" href="/settings/index">Settings</a></li>
                         <li><a class="dropdown-item" href="#">Profile</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="#">Sign out</a></li>
                     </ul>
-                </div> *@
-
-                <div class="text-md-end ps-md-5 ps-3">
-                    <a href="/login" type="button" class="btn btn-secondary text-primary me-2">Login</a>
                 </div>
+
+                @*<div class="text-md-end ps-md-5 ps-3">
+                    <a href="/login" type="button" class="btn btn-secondary text-primary me-2">Login</a>
+                </div>*@
             </div>
         </div>
     </nav>
