--- a/Pages/disaster/profile/entrylog/Index.cshtml
+++ b/Pages/disaster/profile/entrylog/Index.cshtml
@@ -445,13 +445,57 @@
 
 <script>
 	$(document).ready(function () {
+		var drawCallbackEnabled = false; // Set default to false
+
 		var table = $('#entrylog-table').DataTable({
 			responsive: false,
-			pageLength: 25,
 			columnDefs: [
 				{ "orderable": true, "targets": [1, 2] }, // Sortable columns
 				{ "orderable": false, "targets": [0, 3, 4, 5] } // Non-sortable columns
-			]
+			],
+
+			drawCallback: function (settings) {
+				if (!drawCallbackEnabled) {
+					return;
+				}
+
+				var api = this.api();
+				var rows = api.rows({ page: 'current' }).nodes();
+				var last = null;
+
+				api.column(1, { page: 'current' }) // Assuming "Family Serial Num" is the second column (index 1)
+					.data()
+					.each(function (group, i) {
+						if (last !== group) {
+							$(rows)
+								.eq(i)
+								.before(
+									'<tr><td class="bg-light text-dark" colspan="6">'
+									+ '<b>' + group + '</b>' +
+									'</td></tr>'
+								);
+
+							last = group;
+						}
+					});	
+			}
+		});
+
+		// Append the button beside the search bar
+		var searchInput = $('#entrylog-table_filter input');
+		var groupby_family = $('<a class="btn btn-sm btn-secondary" id="groupby_family">Group by Family</button>');
+		searchInput.after(groupby_family);
+
+		// Toggle drawCallback on button click
+		groupby_family.on('click', function () {
+			drawCallbackEnabled = !drawCallbackEnabled;
+
+			// Redraw the table to apply the changes
+			table.draw();
+
+			// Change button color based on activation state
+			groupby_family.toggleClass('btn-secondary', !drawCallbackEnabled);
+			groupby_family.toggleClass('btn-primary', drawCallbackEnabled);
 		});
 
 		table.columns([1, 3, 4]).every(function () {
