--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -58,11 +58,11 @@
                         <i class="bi bi-person-circle text-white"></i>
                     </a>
                     <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-                        <li><a class="dropdown-item" href="">Notification.</a></li>
+                        <li><a class="dropdown-item" href="#">Notifications</a></li>
                         <li><a class="dropdown-item" href="/settings/index">Settings</a></li>
-                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        @*<li><a class="dropdown-item" href="#">Profile</a></li>*@
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Sign out</a></li>
+                        <li><a class="dropdown-item" href="#">Logout</a></li>
                     </ul>
                 </div>
 
