--- a/Pages/Disaster/Profile/entrylog/Index.cshtml
+++ b/Pages/Disaster/Profile/entrylog/Index.cshtml
@@ -449,10 +449,11 @@
 
 		var table = $('#entrylog-table').DataTable({
 			responsive: false,
+			pageLength: 50,
 			columnDefs: [
 				{ "orderable": true, "targets": [1, 2] }, // Sortable columns
 				{ "orderable": false, "targets": [0, 3, 4, 5] } // Non-sortable columns
-			],
+			], order: [[1, 'asc']],
 
 			drawCallback: function (settings) {
 				if (!drawCallbackEnabled) {
@@ -498,7 +499,7 @@
 			groupby_family.toggleClass('btn-primary', drawCallbackEnabled);
 		});
 
-		table.columns([1, 3, 4]).every(function () {
+		table.columns([3, 4]).every(function () {
 			var column = this;
 			var filterContainer = $('<div class="dropdown align-items-center d-inline-flex ps-2	"></div>').appendTo($(column.header()));
 			var btn = $('<button class="btn btn-sm btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="bi bi-funnel"></i></button>').appendTo(filterContainer);
