--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -33,46 +33,46 @@
         <div class="carousel-inner">
             <div class="carousel-item">
                 <img src="/images/ec1img.png" class="d-block w-100" alt="EC1 Image">
-                <div class="carousel-caption text-start d-none d-md-block">
-                    <div class="col-md-6 p-lg-5 mx-auto my-5">
-                        <h1 class="text-white">“Together, we stand stronger in the face of adversity.”</h1>
-                        <br />
-                        <p>
+                <div class="carousel-caption text-start">
+                    <div class="col-lg-6 col-md-12 p-lg-5 mx-auto my-5">
+                        <h1 class="text-white d-none d-sm-block">“Together, we stand stronger in the face of adversity.”</h1>
+                        <br class="d-none d-lg-block"/>
+                        <p class="d-none d-lg-block">
                             Agapay Aid is a web-based application dedicated to aiding the disaster relief efforts in the Philippines.
                             Our application streamlines the management of evacuation centers, ensuring efficient resource allocation, equitable relief goods distribution, staff coordination, and seamless registration of evacuees.
                         </p>
-                        <br />
-                        <p><a class="btn btn-primary" href="/about">Learn more about <b>Agapay</b>Aid</a></p>
+                        <br class="d-none d-lg-block"/>
+                        <p class="d-none d-lg-block"><a class="btn btn-primary" href="/about">Learn more about <b>Agapay</b>Aid</a></p>
                     </div>
                 </div>
             </div>
             <div class="carousel-item active">
                 <img src="/images/ec2img.png" class="d-block w-100" alt="EC2 Image">
-                <div class="carousel-caption text-start d-none d-md-block">
-                    <div class="col-md-6 p-lg-5 mx-auto my-5">
-                        <h1 class="text-white">“Together, we stand stronger in the face of adversity.”</h1>
-                        <br />
-                        <p>
+                <div class="carousel-caption text-start">
+                    <div class="col-lg-6 col-md-12 p-lg-5 mx-auto my-5">
+                        <h1 class="text-white d-none d-sm-block">“Together, we stand stronger in the face of adversity.”</h1>
+                        <br class="d-none d-lg-block" />
+                        <p class="d-none d-lg-block">
                             Agapay Aid is a web-based application dedicated to aiding the disaster relief efforts in the Philippines.
                             Our application streamlines the management of evacuation centers, ensuring efficient resource allocation, equitable relief goods distribution, staff coordination, and seamless registration of evacuees.
                         </p>
-                        <br />
-                        <p><a class="btn btn-primary" href="/about">Learn more about <b>Agapay</b>Aid</a></p>
+                        <br class="d-none d-lg-block" />
+                        <p class="d-none d-lg-block"><a class="btn btn-primary" href="/about">Learn more about <b>Agapay</b>Aid</a></p>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="/images/ec3img.png" class="d-block w-100" alt="EC3 Image">
-                <div class="carousel-caption text-start d-none d-md-block">
-                    <div class="col-md-6 p-lg-5 mx-auto my-5">
-                        <h1 class="text-white">“Together, we stand stronger in the face of adversity.”</h1>
-                        <br />
-                        <p>
+                <div class="carousel-caption text-start">
+                    <div class="col-lg-6 col-md-12 p-lg-5 mx-auto my-5">
+                        <h1 class="text-white d-none d-sm-block">“Together, we stand stronger in the face of adversity.”</h1>
+                        <br class="d-none d-lg-block" />
+                        <p class="d-none d-lg-block">
                             Agapay Aid is a web-based application dedicated to aiding the disaster relief efforts in the Philippines.
                             Our application streamlines the management of evacuation centers, ensuring efficient resource allocation, equitable relief goods distribution, staff coordination, and seamless registration of evacuees.
                         </p>
-                        <br />
-                        <p><a class="btn btn-primary" href="/about">Learn more about <b>Agapay</b>Aid</a></p>
+                        <br class="d-none d-lg-block" />
+                        <p class="d-none d-lg-block"><a class="btn btn-primary" href="/about">Learn more about <b>Agapay</b>Aid</a></p>
                     </div>
                 </div>
             </div>
@@ -225,7 +225,7 @@
 </div>
 
 <div class="container">
-    <div class="p-4 p-md-5 mb-4 text-white rounded bg-primary text-center d-md-none">
+    <div class="p-4 p-md-5 mb-4 text-white rounded bg-primary text-center d-lg-none d-lg-none">
         <!-- This content will be hidden on medium and larger screens -->
         <div class="col-md-6 mx-auto">
             <h1><img src="/white-logo-horizontal.png" alt="" id="logo"></h1>
@@ -234,7 +234,6 @@
         </div>
     </div>
 </div>
-
 
 <script>
     $(document).ready(function () {
