changed view button colors

--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -119,7 +119,7 @@
 						}
 					</td>
 					<td>
-						<a class="btn btn-success edit-button" href="/evacuationcenter/profile?centerID=@item.centerID">
+						<a class="btn btn-primary" href="/evacuationcenter/profile?centerID=@item.centerID">
 							View
 						</a>
 					</td>
