changed view button color

--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -104,7 +104,7 @@
 					<td style="text-align:left;">@item.description</td>
 					<td>@item.dateOccured</td>
 					<td>
-						<a class="btn btn-success edit-button" href="/disaster/profile/index?disasterID=@item.disasterID">
+						<a class="btn btn-primary" href="/disaster/profile/index?disasterID=@item.disasterID">
 							View
 						</a>
 					</td>
