--- a/Pages/Disaster/Profile/Index.cshtml
+++ b/Pages/Disaster/Profile/Index.cshtml
@@ -217,7 +217,7 @@
                     </td>
                     <td width="10%">
                         <div class="position-relative">
-                        <a class="btn btn-success edit-button" href="/disaster/profile/informationboard/index?centerLogID=@item.centerLogID">
+                        <a class="btn btn-primary edit-button" href="/disaster/profile/informationboard/index?centerLogID=@item.centerLogID">
                             <span>View</span>
                         </a>
                         @if (@Model.GetNotificationCount(@item.centerLogID) != 0)
