--- a/Pages/EvacuationCenter/Profile.cshtml
+++ b/Pages/EvacuationCenter/Profile.cshtml
@@ -212,7 +212,7 @@
 				<td style="text-align:left;">@item.description</td>
 				<td>@item.dateOccured</td>
 				<td>
-					<a class="btn btn-primary edit-button" href="/disaster/profile/informationboard/index?centerLogID=@item.centerLogID">
+					<a class="btn btn-primary" href="/disaster/profile/informationboard/index?centerLogID=@item.centerLogID">
 						View
 					</a>
 				</td>
