--- a/Pages/Family/Index.cshtml
+++ b/Pages/Family/Index.cshtml
@@ -128,7 +128,7 @@
 					<td width="20%">@item.municipalityCity</td>
 					<td width="5%" style="text-align: center;">@item.familySize</td>
 					<td width="5%">
-						<a class="btn btn-success edit-button" href="/family/profile/index?familyID=@item.familyID">
+						<a class="btn btn-primary edit-button" href="/family/profile/index?familyID=@item.familyID">
 							View
 						</a>
 					</td>
