--- a/Pages/family/profile/distribution/Index.cshtml
+++ b/Pages/family/profile/distribution/Index.cshtml
@@ -134,7 +134,7 @@
 										<td width="5%">@item.qty</td>
 										<td width="15%">@item.receiveDate</td>
 										<td width="5%">
-											<a class="btn btn-success edit-button" href="/family/profile/distribution/view?packID=@item.packID&familyID=@Model.familyInfo.familyID">
+											<a class="btn btn-primary edit-button" href="/family/profile/distribution/view?packID=@item.packID&familyID=@Model.familyInfo.familyID">
 												View
 											</a>
 										</td>
