--- a/Pages/Disaster/Profile/entrylog/CheckIn.cshtml
+++ b/Pages/Disaster/Profile/entrylog/CheckIn.cshtml
@@ -40,7 +40,7 @@
 
             <div class="col-auto d-flex justify-content-between align-items-center" style="gap: 5px">
                 <a class="btn btn-primary mb-2 d-none d-sm-inline" href="/disaster/profile/entrylog/addfamily/index?centerLogID=@Model.logInfo.centerLogID">
-                     <i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Family not found? Add Family
+                     <i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Not found? Add Family
                  </a>
 
                 <a class="btn btn-primary mb-2 d-sm-none" href="/disaster/profile/entrylog/addfamily/index?centerLogID=@Model.logInfo.centerLogID">
