--- a/Pages/EvacuationCenter/Add.cshtml
+++ b/Pages/EvacuationCenter/Add.cshtml
@@ -72,7 +72,7 @@
 
 			<!-- Barangay -->
 			<div class="row mb-1">
-				<label class="col-sm-4 col-form-label text-start" for="barangayID">Street Address:<span class="text-danger" style="padding:5px">*</span></label>
+				<label class="col-sm-4 col-form-label text-start" for="barangayID">Barangay:<span class="text-danger" style="padding:5px">*</span></label>
 				<div class="col-sm-8">
 					<select class="form-select" name="barangayID" id="barangayID" required>
 						<option value="" selected disabled>Select Barangay</option>
