--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                         <li><a class="dropdown-item" href="/settings/index">Settings</a></li>
                         @*<li><a class="dropdown-item" href="#">Profile</a></li>*@
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Logout</a></li>
+                        <li><a class="dropdown-item" href="/account/logout">Logout</a></li>
                     </ul>
                 </div>
 
