--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -104,7 +104,7 @@
         <div class="col-lg-3 col-md-6">
             <img src="/images/sudaria.png" alt="Patrick Sudaria" class="bd-placeholder-img rounded text-center" width="150" height="150">
             <h5 class="pt-2">Patrick Sudaria</h5>
-            <p>Back-end Developer</p>
+            <p>Technical Writer</p>
         </div>
     </div>
 
